--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,9 @@ h5{
     width: 25%;
     float: right; 
 }
+.middle-container{
+color:#e2d1de;
+}
 .bottom-container {
     background-color: #a56c97;
     padding: 50px 0 20px;
